Finished parsing LtSPICE header

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "istream": "cpp",
         "regex": "cpp",
         "xiosbase": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "cstddef": "cpp"
     }
 }
