--- a/loop_analysis/.gitignore
+++ b/loop_analysis/.gitignore
@@ -1,38 +1,19 @@
-# Created by https://www.toptal.com/developers/gitignore/api/venv,python,vim,macos,windows
-# Edit at https://www.toptal.com/developers/gitignore?templates=venv,python,vim,macos,windows
+# Created by https://www.toptal.com/developers/gitignore/api/python,venv,jupyternotebooks
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,venv,jupyternotebooks
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+### JupyterNotebooks ###
+# gitignore template for Jupyter Notebooks
+# website: http://jupyter.org/
 
-# Icon must end with two \r
-Icon
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
 
+# IPython
+profile_default/
+ipython_config.py
 
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### macOS Patch ###
-# iCloud generated files
-*.icloud
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -113,11 +94,8 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
 
 # IPython
-profile_default/
-ipython_config.py
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
@@ -218,51 +196,4 @@ pyrightconfig.json
 pyvenv.cfg
 pip-selfcheck.json
 
-### Vim ###
-# Swap
-[._]*.s[a-v][a-z]
-!*.svg  # comment out if you don't need vector files
-[._]*.sw[a-p]
-[._]s[a-rt-v][a-z]
-[._]ss[a-gi-z]
-[._]sw[a-p]
-
-# Session
-Session.vim
-Sessionx.vim
-
-# Temporary
-.netrwhist
-*~
-# Auto-generated tag files
-tags
-# Persistent undo
-[._]*.un~
-
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# End of https://www.toptal.com/developers/gitignore/api/venv,python,vim,macos,windows
+# End of https://www.toptal.com/developers/gitignore/api/python,venv,jupyternotebooks
