--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,vim
+loop_analysis/SapWin/Class-D BP.fdt
