--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,16 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
+    "build": {
+        "dockerfile": "./Dockerfile",
+        "context": ".."
+    },
     "forwardPorts": [8888],
     "features": {
-        "ghcr.io/devcontainers/features/git:1": {},
-        "ghcr.io/devcontainers/features/python:1": {
-            "version": 3.11,
-            "installJupyterlab": true
+        "ghcr.io/devcontainers/features/common-utils:2":{
+            "installZsh": "true",
+            "upgradePackages": "true"
         },
-        "ghcr.io/devcontainers-community/features/llvm:3": {}
+        "ghcr.io/devcontainers/features/node:1": {},
+        "ghcr.io/devcontainers/features/git:1": {},
+        "ghcr.io/devcontainers-community/features/llvm:3": {},
     }
 }
